--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.3.0", features = ["derive"] }
 dialoguer = "0.10.4"
+imagesize = "0.12.0"
 junk = "0.1.2"
 walkdir = "2.3.3"
